# MicrostructurePredictor

./: .gitignore  LICENSE  README.md  demo.toml  download.sh  pyproject.toml
.claude/skills/add-adapter/: SKILL.md
.claude/skills/add-property-head/: SKILL.md
.claude/skills/edit-taxonomy/: SKILL.md
.claude/skills/transcribe-hardness/: SKILL.md
data/: hardness_labels.csv  property_lookup.csv  public_sources.csv
data/experimental_campaign/: images.csv  mechanical_tests.csv  process_steps.csv  specimens.csv
data/literature_steel/: manifest.csv
data/literature_steel/guan_2026_metals_16_243/: SOURCE.md
data/literature_steel/ren_2023_metals_13_771/: SOURCE.md
data/public_316l_composition_2026/: SOURCE.md
data/public_in718_carbides_2025/: SOURCE.md
data/public_in718_godec_2024/: SOURCE.md  hardness.csv  link_audit.csv  tensile.csv
docs/: CLEANUP_PLAN.md  CRYSTAL_DISCOVERY_TO_MICROSTRUCTURE_ML.md  DATASET_PLAN.md  EXPERIMENTAL_CAMPAIGN.md  PRIOR_ART.md  PROFESSOR_MEETING_BRIEF.md  PUBLIC_DATA_LINKAGE.md  ROADMAP.md  UHCS_JOIN_KEY_AUDIT.md  UHCS_MEASUREMENT_PRIORITY.md
notebooks/: distant_supervision_walkthrough.ipynb  how_the_net_works.ipynb  microstructure_ai_concepts_lab.ipynb  next_techniques_demo.ipynb  simon_data_landscape_demo.ipynb  temperature_probe.ipynb
scripts/: audit_join_keys.py  build_distant_supervision_notebook.py  build_microstructure_ai_concepts_lab.py  build_next_techniques_demo.py  build_simon_data_landscape_demo.py  fetch_priority_zenodo_datasets.py  fetch_uhcs_mirror.py  fetch_zenodo_in718.py
src/microhard/: __init__.py  backbone.py  classify.py  cli.py  config.py  entity_graph.py  experimental_campaign.py  features.py  join_audit.py  linkage.py  measurement_plan.py  normalize.py  pipeline.py  properties.py  records.py  router.py  segment.py  taxonomy.py  taxonomy.yaml  topo.py  transforms.py
src/microhard/adapters/: __init__.py  base.py  folder.py  godec_in718.py  literature.py  uhcs.py
src/microhard/heads/: __init__.py  base.py  hardness.py
tests/: conftest.py  test_adapters.py  test_backbone.py  test_classify.py  test_cli.py  test_config.py  test_entity_graph.py  test_experimental_campaign.py  test_features.py  test_godec_in718.py  test_heads.py  test_join_audit.py  test_linkage.py  test_literature_adapter.py  test_measurement_plan.py  test_normalize.py  test_pipeline.py  test_properties.py  test_records.py  test_router.py  test_segment.py  test_taxonomy.py  test_topo.py
