[project]
name = "microhard"
version = "0.1.0"
description = "Link public metal micrographs, processing records, and mechanical properties for forward prediction and inverse design."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James Hansen" }]
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.4",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "typer>=0.12",
    "pillow>=10.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

# Persistent-homology extra. Cubical Ripser (cripser) instead of giotto-tda:
# giotto-tda pins scikit-learn==1.3.2, which conflicts with our >=1.4.
# topo.py auto-detects either backend if you install giotto-tda separately.
[project.optional-dependencies]
topo = ["cripser>=0.0.15"]

[dependency-groups]
dev = ["pytest>=8.0"]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.4",
    "matplotlib>=3.9",
    "nbclient>=0.10",
    "nbformat>=5.10",
]

[project.scripts]
microhard = "microhard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microhard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
